--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -16,6 +16,7 @@
         font-size: 14px;
         color: $cinza;
         margin-top: 0.5vw;
+        margin-bottom: 0;
     }
 
     .barra__link {
