--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -15,3 +15,23 @@
         
     }
 }
+
+@media only screen and (max-width: 767px) {
+
+    .menu {
+        .menu__link {
+            margin-bottom: 10vw;
+        }
+    }
+
+
+}
+
+input {
+    border: none;
+
+    &:focus {
+        outline: none;
+        border: none;
+    }
+}
