--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -103,3 +103,24 @@
         margin-right: 0.5vw;
     }
 }
+
+
+@media only screen and (max-width: 767px) {
+
+    .logo {
+        margin-bottom: 10vw;
+    }
+
+    .login-form {
+        .login-form__section {
+            margin-bottom: 5vw;
+        }
+
+        .login-form__button {
+            margin-top: 5vw;
+            margin-bottom: 5vw;
+        }
+    }
+
+
+}
