--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -111,6 +111,13 @@
         margin-bottom: 10vw;
     }
 
+    .login {
+        .login__msg {
+            margin-top: 4vw;
+            margin-bottom: 4vw;
+        }
+    }
+
     .login-form {
         .login-form__section {
             margin-bottom: 5vw;
