--- a/src/scss/regras.scss
+++ b/src/scss/regras.scss
@@ -51,3 +51,40 @@
         }
     }
 }
+
+@media only screen and (max-width: 767px) {
+
+    .regras {
+        margin-top: 20vw;
+        margin-left: 10vw;
+        margin-right: 10vw;
+
+        .regras__title {
+            font-size: 30px;
+            margin-bottom: 12vw;
+        }
+
+        .regras__section {
+            margin-bottom: 16vw;
+
+            .regras__section__title {
+                font-size: 26px;
+                margin-bottom: 12vw;
+            }
+
+            .regras__section__criterio {
+                margin-bottom: 10vw;
+
+                .regras__section__criterio__title {
+                    font-size: 16px;
+                    margin-bottom: 6vw;
+                }
+
+                .regras__section__criterio__exemplos {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+}
