--- a/src/scss/jogos-pf.scss
+++ b/src/scss/jogos-pf.scss
@@ -134,6 +134,17 @@
     }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 @media only screen and (max-width: 767px) {
 
     #primeirafase {
