--- a/src/scss/ranking.scss
+++ b/src/scss/ranking.scss
@@ -8,7 +8,7 @@
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
-        height: 100vh;
+        height: unset;
         padding-top: 5vw;
     }
 }
