--- a/src/scss/ranking.scss
+++ b/src/scss/ranking.scss
@@ -70,6 +70,8 @@
 @media only screen and (max-width: 767px) {
 
     .ranking {
+        padding-bottom: 40vw;
+
         .ranking__msg {
             margin-top: 12vw;
             margin-bottom: 12vw;
