--- a/src/scss/todospalpites.scss
+++ b/src/scss/todospalpites.scss
@@ -212,6 +212,7 @@
 
                     .todospalpites__palpites__grupo__jogo__pontos {
                         width: 40%;
+                        padding-top: 1.5vw;
                     }
                 }
             }
@@ -259,7 +260,7 @@
             }
 
             .todospalpites__pontos__sub {
-                font-size: 12px;
+                font-size: 11px;
                 margin-bottom: 4vw;
             }
         }
