--- a/src/scss/jogoid.scss
+++ b/src/scss/jogoid.scss
@@ -52,6 +52,10 @@
             font-weight: 500;
             text-align: center;
         }
+
+        .jogo__palpite__img {
+            width: 5%;
+        }
     }
 }
 
@@ -74,6 +78,10 @@
             .jogo__palpite__user {
                 font-size: 14px;
                 margin-bottom: 4vw;
+            }
+
+            .jogo__palpite__img {
+                width: 7.5%;
             }
         }
     }
