--- a/src/scss/todospalpites.scss
+++ b/src/scss/todospalpites.scss
@@ -157,6 +157,16 @@
                     width: 5%;
                 }
 
+                .todospalpites__palpites__finais__jogo__pontos {
+                    font-size: 14px;
+                    color: #ffffff;
+                    padding: 0.5vw;
+                    background-color: #8c0040;
+                    width: 10%;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+
                 .right {
                     margin-right: 0;
                     margin-left: 1vw;
