--- a/src/scss/cadastro.scss
+++ b/src/scss/cadastro.scss
@@ -21,7 +21,7 @@
         .cadastro-form__section__label {
             display: block;
             text-align: center;
-            font-size: 12px;
+            font-size: 0.625vw;
             margin-bottom: 0.5vw;
             color: $preto;
         }
@@ -32,7 +32,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 0.5vw;
-            font-size: 12px;
+            font-size: 0.625vw;
         }
 
     }
@@ -81,7 +81,7 @@
         width: 60%;
         margin-left: auto;
         margin-right: auto;
-        font-size: 12px;
+        font-size: 0.625vw;
         padding: 0.5vw;
         margin-top: 1vw;
         color: $preto;
