--- a/src/scss/jogos-pf.scss
+++ b/src/scss/jogos-pf.scss
@@ -212,7 +212,7 @@ input[type=number] {
             }
 
             .classificacao__box__text {
-                font-size: 12px;
+                font-size: 0.625vw;
                 margin-bottom: 6vw;
             }
 
