--- a/src/scss/redefinir.scss
+++ b/src/scss/redefinir.scss
@@ -26,7 +26,7 @@
         .redefinir-form__section__label {
             display: block;
             text-align: center;
-            font-size: 12px;
+            font-size: 0.625vw;
             margin-bottom: 0.5vw;
             color: $preto;
         }
@@ -37,7 +37,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 0.5vw;
-            font-size: 12px;
+            font-size: 0.625vw;
         }
 
     }
@@ -65,7 +65,7 @@
         width: 60%;
         margin-left: auto;
         margin-right: auto;
-        font-size: 12px;
+        font-size: 0.625vw;
         padding: 0.5vw;
         margin-top: 1vw;
         color: $preto;
@@ -88,7 +88,7 @@
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-    font-size: 12px;
+    font-size: 0.625vw;
     padding: 0.5vw;
     margin-top: 1vw;
     color: $preto;
