--- a/src/scss/regras.scss
+++ b/src/scss/regras.scss
@@ -81,7 +81,7 @@
                 }
 
                 .regras__section__criterio__exemplos {
-                    font-size: 12px;
+                    font-size: 0.625vw;
                 }
             }
         }
