--- a/src/scss/todosjogos.scss
+++ b/src/scss/todosjogos.scss
@@ -101,7 +101,7 @@
                 }
 
                 .todosjogos__fase__jogo__info {
-                    font-size: 12px;
+                    font-size: 0.625vw;
                 }
             }
         }
