--- a/src/scss/todospalpites.scss
+++ b/src/scss/todospalpites.scss
@@ -259,7 +259,7 @@
             }
 
             .todospalpites__header__subtitle {
-                font-size: 12px;
+                font-size: 0.625vw;
             }
         }
         .todospalpites__pontos {
