--- a/src/scss/fasefinal.scss
+++ b/src/scss/fasefinal.scss
@@ -85,7 +85,7 @@
                 display: block;
                 width: 90%;
                 text-align: center;
-                font-size: 12px;
+                font-size: 0.625vw;
                 margin-left: auto;
                 margin-right: auto;
                 border: 2px solid $vermelho;
