--- a/src/scss/finais.scss
+++ b/src/scss/finais.scss
@@ -84,7 +84,7 @@
                     display: block;
                     width: 90%;
                     text-align: center;
-                    font-size: 12px;
+                    font-size: 0.625vw;
                     margin-left: auto;
                     margin-right: auto;
                     border: 2px solid $vermelho;
